[update] production module version 2. [add] suppliers module
